# surface-classification

./: .gitignore  README.md  pyproject.toml
archive/bag_processing_scripts/: bag_to_csv.ipynb  bag_to_csv.py  merge_csv.ipynb  merge_csv.py  merge_csv_lider.py
archive/unused_scripts/: clustering.ipynb  exploratory_analysis.ipynb  surface_classification_siamese.ipynb
configs/: cnn_tuning.yaml  exploratory_analysis.yaml  threshold_analysis.yaml  xgb_tuning.yaml
data/train_set/: labels.json
results/: odom_error.ods
results/biases/: 4W_imu_2024-06-21-04-02-42.json
results/checkpoints/: cnn_classifier_10_4W_imu_2024-06-09-00-51-23.pt  cnn_classifier_3_4W_imu_2024-06-10-21-46-16.pt  xgb_classifier_10_4W_imu_2024-06-26-18-59-23.json  xgb_classifier_3_4W_imu_2024-06-26-20-40-00.json
results/cv/: cv_10_4W_6W_imu_2024-05-12-12-50-16.json  cv_10_4W_6W_imu_servo_2024-05-12-06-19-23.json  cv_10_4W_6W_servo_2024-06-04-12-19-43.json  cv_10_4W_imu_2024-05-12-16-12-19.json  cv_10_4W_imu_servo_2024-05-12-14-35-37.json  cv_10_4W_servo_2024-06-04-06-49-43.json  cv_10_6W_imu_2024-05-12-20-11-19.json  cv_10_6W_imu_servo_2024-05-12-18-14-56.json  cv_10_6W_servo_2024-06-04-09-05-38.json  cv_3_4W_6W_imu_2024-05-27-20-47-56.json  cv_3_4W_6W_imu_servo_2024-05-27-17-42-11.json  cv_3_4W_6W_servo_2024-06-04-03-36-49.json  cv_3_4W_imu_2024-05-27-22-17-37.json  cv_3_4W_imu_servo_2024-05-27-23-46-22.json  cv_3_4W_servo_2024-06-04-05-11-19.json  cv_3_6W_imu_2024-05-28-10-03-25.json  cv_3_6W_imu_servo_2024-05-28-01-33-03.json  cv_3_6W_servo_2024-06-04-00-21-55.json
results/tuning/: 10_4W_6W_imu_2024-05-13-08-18-11.json  10_4W_6W_imu_servo_2024-05-13-01-30-56.json  10_4W_6W_servo_2024-06-03-21-21-22.json  10_4W_imu_2024-05-13-09-24-10.json  10_4W_imu_servo_2024-05-13-08-53-16.json  10_4W_servo_2024-06-03-21-51-29.json  10_6W_imu_2024-05-13-10-35-45.json  10_6W_imu_servo_2024-05-13-09-58-30.json  10_6W_servo_2024-06-03-22-29-57.json  3_4W_6W_imu_2024-05-28-18-34-16.json  3_4W_6W_imu_servo_2024-05-28-11-54-14.json  3_4W_6W_servo_2024-06-03-18-31-33.json  3_4W_imu_2024-05-28-19-05-17.json  3_4W_imu_servo_2024-05-28-19-35-07.json  3_4W_servo_2024-06-03-16-30-49.json  3_6W_imu_2024-05-28-20-40-28.json  3_6W_imu_servo_2024-05-28-20-10-03.json  3_6W_servo_2024-06-03-17-12-39.json  xgb_10_4W_6W_imu_2024-06-07-00-07-27.json  xgb_10_4W_6W_imu_servo_2024-06-07-01-20-21.json  xgb_10_4W_6W_servo_2024-06-07-00-25-17.json  xgb_10_4W_imu_2024-06-06-23-47-53.json  xgb_10_4W_imu_servo_2024-06-07-00-34-13.json  xgb_10_4W_servo_2024-06-07-00-12-10.json  xgb_10_6W_imu_2024-06-06-23-54-59.json  xgb_10_6W_imu_servo_2024-06-07-00-56-16.json  xgb_10_6W_servo_2024-06-07-00-16-36.json  xgb_3_4W_6W_imu_2024-06-07-18-23-51.json  xgb_3_4W_6W_imu_servo_2024-06-07-18-55-42.json  xgb_3_4W_6W_servo_2024-06-07-18-36-03.json  xgb_3_4W_imu_2024-06-07-18-12-13.json  xgb_3_4W_imu_servo_2024-06-07-18-41-55.json  xgb_3_4W_servo_2024-06-07-18-27-19.json  xgb_3_6W_imu_2024-06-07-18-16-43.json  (+2 more)
src/: bag_to_csv.ipynb  clustering.ipynb  cv_results.ipynb  cv_results.py  data_analysis.ipynb  data_analysis_grass_square.ipynb  data_analysis_linoleum_eight.ipynb  data_analysis_linoleum_square.ipynb  data_analysis_panels_square.ipynb  data_analysis_tiles_square.ipynb  datasets.py  digits_testground_cnn.ipynb  digits_testground_siamese.ipynb  experiment_path.ipynb  exploratory_analysis.ipynb  exploratory_analysis.py  helpers.py  interpolate_csv.ipynb  kaggle_analysis.ipynb  launcher_cnn.py  launcher_xgb.py  merge_csv.ipynb  model_inference.ipynb  model_inference.py  models.py  odometry_error.ipynb  odometry_error.py  pessimistic_biases.ipynb  pessimistic_biases.py  surface_classification.ipynb  surface_classification_cnn.ipynb  surface_classification_cnn_cv.ipynb  surface_classification_cnn_cv.py  surface_classification_cnn_lstm.ipynb  surface_classification_cnn_pooling.ipynb  surface_classification_cnn_training.ipynb  surface_classification_cnn_training.py  surface_classification_cnn_training_lider.py  surface_classification_cnn_tuning.ipynb  surface_classification_cnn_tuning.py  (+8 more)
(+691 files in other folders)
